<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <DUT Name="ST_SchrauberStatusDiag" Id="{c47dc7dc-35aa-473c-9332-7cb51c729756}">
    <Declaration><![CDATA[TYPE ST_SchrauberStatusDiag :
STRUCT
	
	nSollDrehmoment		:LREAL;
	nSollVelo			:LREAL;
	
	nActDrehmoment		:LREAL;	
	nActVelo			:LREAL;
	nActTiefe			:LREAL;
	nActPos				:LREAL;
	nActDrehwinkel		:LREAL;
	
	nStep				:INT;
	
	iSchraubfall		:INT;
	
	bDrehmomentOk			:BOOL;
	bTiefeOk				:BOOL;
	bDrehwinkelOk			:BOOL;

	bDrehmomentErhoehung	:BOOL;
	
	tSchraubtaktKomplett	:TIME;
	tSchraubtaktSchrauben	:TIME;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>